--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,9 @@ server.servlet.context-path=/petsjavawebapp
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.enabled=true
+
+
+#arrancar con datos sql precargados
+
+spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
